<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/white"
    >



    <RelativeLayout
        android:layout_width="177dp"
        android:layout_height="match_parent"
        >





        <com.google.android.material.button.MaterialButton
            android:id="@+id/insert"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="350dp"

            android:text="@string/Insert"
            android:textSize="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backup"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="280dp"

            android:text="@string/Backup"
            android:textSize="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restore"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="210dp"

            android:text="@string/restore"
            android:textSize="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quiz"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="160dp"

            android:text="@string/quiz"
            android:textSize="12dp"/>


        <EditText
            android:id="@+id/retext"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"

            android:hint="@string/File">


        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/click"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"


            android:text="@string/Ok"
            android:textSize="10dp" />



        <TextView
            android:id="@+id/board"
            android:layout_width="340dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="450dp"

            android:text="@string/Board"

            android:background="@drawable/rounded_corner"
            android:textColor="@color/dark"
            android:paddingLeft="20dp"


            />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:theme="@style/AppSearchView"
            android:queryHint="Search Here"
            android:iconifiedByDefault="false"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            />




    </RelativeLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="10dp">



    </ListView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchorGravity="bottom|right|end"/>






</LinearLayout>
